fix: resolved contrast issue in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ header h1 {
     margin-top: 0.8rem;
     margin-bottom: 0.6rem;
     text-align: center;
-    color: #456E4D;
+    color: #2a442f;
     font-family: 'Lato', sans-serif;
 }
 
@@ -79,6 +79,7 @@ header h1 {
     align-items: center;
     justify-content: center;
     font-size: 0.75em;
+    font-weight: bold;
     height: 2.5em;
     width: 100%;
     font-family: 'Lato', sans-serif;
@@ -159,7 +160,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    letter-spacing: 2 px;
+    letter-spacing: 2px;
 }
 
 #img-txt-wrap {
